--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@mdi/font": "^7.4.47",
     "bootstrap": "^5.3.8",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "swiper": "^12.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
